<resources>
    <string name="app_name">MyMovieBox</string>
    <string name="add_to_my_list">Add to My List</string>
    <string name="remove_from_my_list">Remove From My List</string>
    <string name="added_to_my_list">%s added to My List</string>
    <string name="removed_from_my_list">%s removed from My List</string>
    <string name="no_connection">No Connection!</string>
    <string name="poster_image">Poster Image</string>
    <string name="retry">Retry</string>
    <string name="genre">Genre</string>
    <string name="runtime">%d min</string>
    <string name="airing_date">Airing Date</string>
    <string name="airing_date_format">%s - %s</string>
    <string name="status">Status</string>
    <string name="season">Season</string>
    <string name="directed_by">Directed by</string>
    <string name="release_date">Release Date</string>
    <string name="rating">Rating</string>
    <string name="description_poster">Image Poster</string>
    <string name="description_backdrop">Image Backdrop</string>
    <string name="duration">Duration</string>
    <string name="title_empty">There is nothing here!</string>
    <string name="subtitle_empty">Find your favorite item, and add it to the favorite. The items will appears here.</string>
    <string name="summary">Summary</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_activity_splash">Splash Activity</string>
    <string name="nav_home">Home</string>
    <string name="nav_movie">Movie</string>
    <string name="nav_tv_show">Tv Show</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_search">Search</string>
    <string name="nav_settings">Settings</string>
    <string name="header_preferences">Preferences</string>
    <string name="hint_search_movie">Insert a keyword i.e Parasite</string>
    <string name="hint_search_tv">Insert a keyword i.e Extracurricular</string>
    <string name="message_query_null">Keyword cannot be blank!</string>
    <string name="subtitle_no_result">Your keyword doesn\'t match with any item, please try again with different keyword</string>
    <string name="title_features">Features</string>
    <string name="title_dynamicfeature">Search</string>
    <string name="discover">Discover</string>
</resources>