<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/spacing_tiny"
    android:layout_marginTop="@dimen/spacing_normal"
    android:layout_marginEnd="@dimen/spacing_tiny"
    android:layout_marginBottom="@dimen/spacing_large"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:shimmer_auto_start="true" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/spacing_normal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            app:cardCornerRadius="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="112dp"
                android:layout_height="168dp"
                android:contentDescription="@string/description_poster"
                tools:src="@drawable/dummy_poster" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title"
            style="@style/Headline"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/spacing_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingBottom="@dimen/spacing_tiny"
            tools:text="Nobody" />

        <TextView
            android:id="@+id/tv_genre_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:text="@string/genre"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="@id/tv_genre_field"
            tools:text="Action, Science-Fiction" />

        <TextView
            android:id="@+id/tv_rating_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/rating"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_genre_field" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/MyRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating_field"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@id/tv_rating_field" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/rating_bar"
            app:layout_constraintTop_toBottomOf="@id/rating_bar"
            app:layout_constraintTop_toTopOf="@+id/rating_bar"
            tools:text="7.8" />

        <TextView
            android:id="@+id/tv_runtime_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/duration"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_rating_field" />

        <TextView
            android:id="@+id/tv_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_runtime_field"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@id/tv_runtime_field"
            tools:text="120 minutes" />

        <TextView
            android:id="@+id/tv_director_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_small"
            android:text="@string/directed_by"
            app:layout_constraintStart_toEndOf="@id/cv_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_runtime_field" />

        <TextView
            android:id="@+id/tv_director"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/tv_director_field"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@id/tv_director_field"
            tools:text="Ilya Naishuller" />

        <Button
            android:id="@+id/btn_favorite"
            style="@style/Button.Block"
            android:layout_marginTop="@dimen/spacing_normal"
            android:enabled="false"
            android:text="@string/add_to_my_list"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cv_poster" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextView"
            android:layout_marginTop="@dimen/spacing_larger"
            android:text="@string/summary"
            android:textColor="@android:color/black"
            android:textSize="@dimen/font_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_favorite" />

        <TextView
            android:id="@+id/tv_overview"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            tools:text="In a time when monsters walk the Earth, humanity’s fight for its future sets Godzilla and Kong on a collision course that will see the two most powerful forces of nature on the planet collide in a spectacular battle for the ages." />

        <TextView
            android:id="@+id/tv_release_date_field"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/release_date"
            android:textColor="@color/primaryDarkColor"
            android:textSize="@dimen/font_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_overview" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date_field"
            tools:text="0-0-1990" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="216dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>